# internal/presentation/handler/user_handler.go
@@ -19,11 +19,19 @@ import (
 type userHandler struct {
 	*db.DBManager
 	user_usecase.RegisterUserUseCase
+	user_usecase.EditUserUseCase
 }
 
-// EditUserProfile implements oas.UserHandler.
-func (u *userHandler) EditUserProfile(ctx context.Context) (oas.EditUserProfileRes, error) {
-	panic("unimplemented")
+func NewUserHandler(
+	DBManager *db.DBManager,
+	registerUserUsecase user_usecase.RegisterUserUseCase,
+	editUserUsecase user_usecase.EditUserUseCase,
+) oas.UserHandler {
+	return &userHandler{
+		DBManager:           DBManager,
+		RegisterUserUseCase: registerUserUsecase,
+		EditUserUseCase:     editUserUsecase,
+	}
 }
 
 // GetUserProfile implements oas.UserHandler.
@@ -32,6 +40,72 @@ func (u *userHandler) GetUserProfile(ctx context.Context) (*oas.GetUserProfileOK
 	return &oas.GetUserProfileOK{
 		DisplayID:   "string",
 		DisplayName: "string",
+	}, nil
+}
+
+// EditUserProfile ユーザープロフィールの編集
+func (u *userHandler) EditUserProfile(ctx context.Context, params oas.OptEditUserProfileReq) (oas.EditUserProfileRes, error) {
+	claim := session.GetSession(ctx)
+	if !params.IsSet() {
+		return nil, messages.RequiredParameterError
+	}
+	userID, err := claim.UserID()
+	if err != nil {
+		utils.HandleError(ctx, err, "claim.UserID")
+		return nil, messages.InternalServerError
+	}
+	value := params.Value
+	if err := value.Validate(); err != nil {
+		utils.HandleError(ctx, err, "value.Validate")
+		return nil, messages.RequiredParameterError
+	}
+
+	var file *multipart.FileHeader
+	if value.Icon.IsSet() {
+		content, err := io.ReadAll(value.Icon.Value.File)
+		if err != nil {
+			utils.HandleError(ctx, err, "io.ReadAll")
+			return nil, messages.InternalServerError
+		}
+		file, err = MakeFileHeader(value.Icon.Value.Name, content)
+		if err != nil {
+			utils.HandleError(ctx, err, "MakeFileHeader")
+			return nil, messages.InternalServerError
+		}
+	}
+
+	out, err := u.EditUserUseCase.Execute(ctx, user_usecase.EditUserInput{
+		UserID:       userID,
+		DisplayName:  utils.ToPtrIfNotNullValue(value.DisplayName.Null, value.DisplayName.Value),
+		Icon:         file,
+		YearOfBirth:  utils.ToPtrIfNotNullValue(value.YearOfBirth.Null, value.YearOfBirth.Value),
+		Municipality: utils.ToPtrIfNotNullValue(value.Municipality.Null, value.Municipality.Value),
+		Occupation: utils.ToPtrIfNotNullFunc(value.Occupation.Null, func() string {
+			txt, err := value.Occupation.Value.MarshalText()
+			if err != nil {
+				utils.HandleError(ctx, err, "value.Occupation")
+				return ""
+			}
+			return string(txt)
+		}),
+		Gender: utils.ToPtrIfNotNullFunc(value.Gender.Null, func() string {
+			txt, err := value.Gender.Value.MarshalText()
+			if err != nil {
+				utils.HandleError(ctx, err, "value.Gender")
+				return ""
+			}
+			return string(txt)
+		}),
+	})
+	if err != nil {
+		utils.HandleError(ctx, err, "EditUserUseCase.Execute")
+		return nil, err
+	}
+
+	return &oas.EditUserProfileOK{
+		DisplayID:   out.DisplayID,
+		DisplayName: out.DisplayName,
+		IconURL:     utils.StringToOptString(claim.IconURL),
 	}, nil
 }
 
@@ -51,24 +125,6 @@ func (u *userHandler) RegisterUser(ctx context.Context, params oas.OptRegisterUs
 		utils.HandleError(ctx, err, "value.Validate")
 		return nil, messages.RequiredParameterError
 	}
-	gender := utils.ToPtrIfNotNullFunc(value.Gender.Null, func() string {
-		txt, err := value.Gender.Value.MarshalText()
-		if err != nil {
-			utils.HandleError(ctx, err, "value.Gender")
-			return ""
-		}
-		return string(txt)
-	})
-	occupation := utils.ToPtrIfNotNullFunc(value.Occupation.Null, func() string {
-		txt, err := value.Occupation.Value.MarshalText()
-		if err != nil {
-			utils.HandleError(ctx, err, "value.Occupation")
-			return ""
-		}
-		return string(txt)
-	})
-	municipality := utils.ToPtrIfNotNullValue(value.Municipality.Null, value.Municipality.Value)
-	yearOfBirth := utils.ToPtrIfNotNullValue(value.YearOfBirth.Null, value.YearOfBirth.Value)
 
 	var file *multipart.FileHeader
 	if value.Icon.IsSet() {
@@ -85,14 +141,28 @@ func (u *userHandler) RegisterUser(ctx context.Context, params oas.OptRegisterUs
 	}
 
 	input := user_usecase.RegisterUserInput{
-		UserID:        userID,
-		DisplayID:     value.DisplayID,
-		DisplayName:   value.DisplayName,
-		Icon:          file,
-		YearOfBirth:   yearOfBirth,
-		Gender:        gender,
-		Municipality:  municipality,
-		Occupation:    occupation,
+		UserID:       userID,
+		DisplayID:    value.DisplayID,
+		DisplayName:  value.DisplayName,
+		Icon:         file,
+		YearOfBirth:  utils.ToPtrIfNotNullValue(value.YearOfBirth.Null, value.YearOfBirth.Value),
+		Municipality: utils.ToPtrIfNotNullValue(value.Municipality.Null, value.Municipality.Value),
+		Occupation: utils.ToPtrIfNotNullFunc(value.Occupation.Null, func() string {
+			txt, err := value.Occupation.Value.MarshalText()
+			if err != nil {
+				utils.HandleError(ctx, err, "value.Occupation")
+				return ""
+			}
+			return string(txt)
+		}),
+		Gender: utils.ToPtrIfNotNullFunc(value.Gender.Null, func() string {
+			txt, err := value.Gender.Value.MarshalText()
+			if err != nil {
+				utils.HandleError(ctx, err, "value.Gender")
+				return ""
+			}
+			return string(txt)
+		}),
 		HouseholdSize: &value.HouseholdSize.Value,
 	}
 	out, err := u.RegisterUserUseCase.Execute(ctx, input)
@@ -111,15 +181,6 @@ func (u *userHandler) RegisterUser(ctx context.Context, params oas.OptRegisterUs
 	}, nil
 }
 
-func NewUserHandler(
-	DBManager *db.DBManager,
-	registerUserUsecase user_usecase.RegisterUserUseCase,
-) oas.UserHandler {
-	return &userHandler{
-		DBManager:           DBManager,
-		RegisterUserUseCase: registerUserUsecase,
-	}
-}
 func MakeFileHeader(name string, dateBytes []byte) (*multipart.FileHeader, error) {
 	body := new(bytes.Buffer)
 	writer := multipart.NewWriter(body)
