# internal/presentation/oas/oas_request_encoders_gen.go
@@ -48,6 +48,129 @@ func encodeCreateTalkSessionRequest(
 	return nil
 }
 
+func encodeEditUserProfileRequest(
+	req OptEditUserProfileReq,
+	r *http.Request,
+) error {
+	const contentType = "multipart/form-data"
+	if !req.Set {
+		// Keep request with empty body if value is not set.
+		return nil
+	}
+	request := req.Value
+
+	q := uri.NewFormEncoder(map[string]string{})
+	{
+		// Encode "displayName" form field.
+		cfg := uri.QueryParameterEncodingConfig{
+			Name:    "displayName",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+		if err := q.EncodeParam(cfg, func(e uri.Encoder) error {
+			if val, ok := request.DisplayName.Get(); ok {
+				return e.EncodeValue(conv.StringToString(val))
+			}
+			return nil
+		}); err != nil {
+			return errors.Wrap(err, "encode query")
+		}
+	}
+	{
+		// Encode "yearOfBirth" form field.
+		cfg := uri.QueryParameterEncodingConfig{
+			Name:    "yearOfBirth",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+		if err := q.EncodeParam(cfg, func(e uri.Encoder) error {
+			if val, ok := request.YearOfBirth.Get(); ok {
+				return e.EncodeValue(conv.IntToString(val))
+			}
+			return nil
+		}); err != nil {
+			return errors.Wrap(err, "encode query")
+		}
+	}
+	{
+		// Encode "gender" form field.
+		cfg := uri.QueryParameterEncodingConfig{
+			Name:    "gender",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+		if err := q.EncodeParam(cfg, func(e uri.Encoder) error {
+			if val, ok := request.Gender.Get(); ok {
+				return e.EncodeValue(conv.StringToString(string(val)))
+			}
+			return nil
+		}); err != nil {
+			return errors.Wrap(err, "encode query")
+		}
+	}
+	{
+		// Encode "municipality" form field.
+		cfg := uri.QueryParameterEncodingConfig{
+			Name:    "municipality",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+		if err := q.EncodeParam(cfg, func(e uri.Encoder) error {
+			if val, ok := request.Municipality.Get(); ok {
+				return e.EncodeValue(conv.StringToString(val))
+			}
+			return nil
+		}); err != nil {
+			return errors.Wrap(err, "encode query")
+		}
+	}
+	{
+		// Encode "occupation" form field.
+		cfg := uri.QueryParameterEncodingConfig{
+			Name:    "occupation",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+		if err := q.EncodeParam(cfg, func(e uri.Encoder) error {
+			if val, ok := request.Occupation.Get(); ok {
+				return e.EncodeValue(conv.StringToString(string(val)))
+			}
+			return nil
+		}); err != nil {
+			return errors.Wrap(err, "encode query")
+		}
+	}
+	{
+		// Encode "householdSize" form field.
+		cfg := uri.QueryParameterEncodingConfig{
+			Name:    "householdSize",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+		if err := q.EncodeParam(cfg, func(e uri.Encoder) error {
+			if val, ok := request.HouseholdSize.Get(); ok {
+				return e.EncodeValue(conv.IntToString(val))
+			}
+			return nil
+		}); err != nil {
+			return errors.Wrap(err, "encode query")
+		}
+	}
+	body, boundary := ht.CreateMultipartBody(func(w *multipart.Writer) error {
+		if val, ok := request.Icon.Get(); ok {
+			if err := val.WriteMultipart("icon", w); err != nil {
+				return errors.Wrap(err, "write \"icon\"")
+			}
+		}
+		if err := q.WriteMultipart(w); err != nil {
+			return errors.Wrap(err, "write multipart")
+		}
+		return nil
+	})
+	ht.SetCloserBody(r, body, mime.FormatMediaType(contentType, map[string]string{"boundary": boundary}))
+	return nil
+}
+
 func encodeIntentionRequest(
 	req OptIntentionReq,
 	r *http.Request,
@@ -302,31 +425,6 @@ func encodeRegisterUserRequest(
 			if err := val.WriteMultipart("icon", w); err != nil {
 				return errors.Wrap(err, "write \"icon\"")
 			}
-		}
-		if err := q.WriteMultipart(w); err != nil {
-			return errors.Wrap(err, "write multipart")
-		}
-		return nil
-	})
-	ht.SetCloserBody(r, body, mime.FormatMediaType(contentType, map[string]string{"boundary": boundary}))
-	return nil
-}
-
-func encodeTestRequest(
-	req OptTestReq,
-	r *http.Request,
-) error {
-	const contentType = "multipart/form-data"
-	if !req.Set {
-		// Keep request with empty body if value is not set.
-		return nil
-	}
-	request := req.Value
-
-	q := uri.NewFormEncoder(map[string]string{})
-	body, boundary := ht.CreateMultipartBody(func(w *multipart.Writer) error {
-		if err := request.File.WriteMultipart("file", w); err != nil {
-			return errors.Wrap(err, "write \"file\"")
 		}
 		if err := q.WriteMultipart(w); err != nil {
 			return errors.Wrap(err, "write multipart")
