# internal/presentation/oas/oas_validators_gen.go
@@ -95,6 +95,98 @@ func (s *EditUserProfileOK) Validate() error {
 	return nil
 }
 
+func (s *EditUserProfileReq) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if value, ok := s.Gender.Get(); ok {
+			if err := func() error {
+				if err := value.Validate(); err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return err
+			}
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "gender",
+			Error: err,
+		})
+	}
+	if err := func() error {
+		if value, ok := s.Occupation.Get(); ok {
+			if err := func() error {
+				if err := value.Validate(); err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return err
+			}
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "occupation",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
+func (s EditUserProfileReqGender) Validate() error {
+	switch s {
+	case "male":
+		return nil
+	case "female":
+		return nil
+	case "other":
+		return nil
+	case "preferNotToSay":
+		return nil
+	default:
+		return errors.Errorf("invalid value: %v", s)
+	}
+}
+
+func (s EditUserProfileReqOccupation) Validate() error {
+	switch s {
+	case "正社員":
+		return nil
+	case "契約社員":
+		return nil
+	case "公務員":
+		return nil
+	case "自営業":
+		return nil
+	case "会社役員":
+		return nil
+	case "パート・アルバイト":
+		return nil
+	case "家事従事者":
+		return nil
+	case "学生":
+		return nil
+	case "無職":
+		return nil
+	case "その他":
+		return nil
+	case "無回答":
+		return nil
+	default:
+		return errors.Errorf("invalid value: %v", s)
+	}
+}
+
 func (s *GetTalkSessionDetailOK) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
